--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript",
+  "name": "next-keycloak",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -9,16 +9,14 @@
   },
   "dependencies": {
     "cookie": "^0.4.0",
-    "hoist-non-react-statics": "^3.3.0",
     "js-cookie": "^2.2.1",
     "keycloak-js": "^6.0.1",
-    "next": "latest",
+    "next": "^9.0.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
     "@types/cookie": "^0.3.3",
-    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/js-cookie": "^2.2.2",
     "@types/node": "^11.13.9",
     "@types/react": "^16.8.15",
